# picklejar

./: .gitignore  .readthedocs.yaml  CHANGES.md  CODEOWNERS  Makefile  README.md  bitbucket-pipelines.yml  deploy.bash  picklejar.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: lint_and_test.yml  publish.yml  python-app.yml  test_pypi.yml
docs/: Makefile  conf.py  make.bat  picklejar.rst  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_templates/: about.html  links.html  sidenav.html  versions.html
tests/: test_picklejar.py
