[project]
name = "picklejar"
version = "4.0.0"
description = "Read and write pickles to a single file"
authors = [{ name = "Jesse Almanrode", email = "jesse@almanrode.com" }]
requires-python = "<4.0,>3.9"
readme = "README.md"
license = "LGPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["dill>=0.3,<0.4"]

[project.urls]
Homepage = "http://picklejar.readthedocs.io/"
Repository = "https://github.com/isaiah1112/picklejar"

[dependency-groups]
dev = [
    "coverage>=7,<8",
    "discover>=0.4,<0.5",
    "mock>=5,<6",
    "ruff>=0.11.12,<0.12",
]
docs = ["sphinx>=6,<7"]

[tool.hatch.build.targets.sdist]
include = ["picklejar.py"]

[tool.hatch.build.targets.wheel]
include = ["picklejar.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true